// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders as \`disabled\` when defined 1`] = `
.c0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
  opacity: 0.5;
}

.c1 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:hover:not(:focus) {
  border-color: #5A5F65;
}

.c1:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c1:invalid,
.c1:-moz-ui-invalid {
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1:focus {
  border-color: #0CD664;
  outline: none;
}

<fieldset>
  <label
    className=""
  >
    <span
      className="c0"
      disabled={true}
    >
      Text
    </span>
    <input
      className="c1"
      disabled={true}
      placeholder=" "
      type="text"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
      disabled={true}
    >
      Date
    </span>
    <input
      className="c1"
      disabled={true}
      placeholder=" "
      type="date"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
      disabled={true}
    >
      Email
    </span>
    <input
      className="c1"
      disabled={true}
      placeholder=" "
      type="email"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
      disabled={true}
    >
      Number
    </span>
    <input
      className="c1"
      disabled={true}
      placeholder=" "
      type="number"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
      disabled={true}
    >
      Password
    </span>
    <input
      className="c1"
      disabled={true}
      placeholder=" "
      type="password"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
      disabled={true}
    >
      Search
    </span>
    <input
      className="c1"
      disabled={true}
      placeholder=" "
      type="search"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
      disabled={true}
    >
      Telephone
    </span>
    <input
      className="c1"
      disabled={true}
      placeholder=" "
      type="tel"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
      disabled={true}
    >
      URL
    </span>
    <input
      className="c1"
      disabled={true}
      placeholder=" "
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders as an \`error\` when defined 1`] = `
.c0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c1 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  border-color: #FF4E64;
}

.c1::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:hover:not(:focus) {
  border-color: #5A5F65;
}

.c1:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c1:invalid,
.c1:-moz-ui-invalid {
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1:focus {
  border-color: #0CD664;
  outline: none;
}

<fieldset>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Text
    </span>
    <input
      className="c1"
      placeholder=" "
      type="text"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Date
    </span>
    <input
      className="c1"
      placeholder=" "
      type="date"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Email
    </span>
    <input
      className="c1"
      placeholder=" "
      type="email"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Number
    </span>
    <input
      className="c1"
      placeholder=" "
      type="number"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Password
    </span>
    <input
      className="c1"
      placeholder=" "
      type="password"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Search
    </span>
    <input
      className="c1"
      placeholder=" "
      type="search"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Telephone
    </span>
    <input
      className="c1"
      placeholder=" "
      type="tel"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      URL
    </span>
    <input
      className="c1"
      placeholder=" "
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders correctly for other types 1`] = `
.c0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c1 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:hover:not(:focus) {
  border-color: #5A5F65;
}

.c1:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c1:invalid,
.c1:-moz-ui-invalid {
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1:focus {
  border-color: #0CD664;
  outline: none;
}

<fieldset>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Text
    </span>
    <input
      className="c1"
      placeholder=" "
      required={true}
      type="text"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Date
    </span>
    <input
      className="c1"
      placeholder=" "
      required={true}
      type="date"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Email
    </span>
    <input
      className="c1"
      placeholder=" "
      required={true}
      type="email"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Number
    </span>
    <input
      className="c1"
      placeholder=" "
      required={true}
      type="number"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Password
    </span>
    <input
      className="c1"
      placeholder=" "
      required={true}
      type="password"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Search
    </span>
    <input
      className="c1"
      placeholder=" "
      required={true}
      type="search"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      Telephone
    </span>
    <input
      className="c1"
      placeholder=" "
      required={true}
      type="tel"
    />
  </label>
  <label
    className=""
  >
    <span
      className="c0"
    >
      URL
    </span>
    <input
      className="c1"
      placeholder=" "
      required={true}
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders correctly with \`text\` type by default 1`] = `
.c0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c1 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:hover:not(:focus) {
  border-color: #5A5F65;
}

.c1:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c1:invalid,
.c1:-moz-ui-invalid {
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1:focus {
  border-color: #0CD664;
  outline: none;
}

<label
  className=""
>
  <span
    className="c0"
  >
    Example Input
  </span>
  <input
    className="c1"
    placeholder=" "
    type="text"
  />
</label>
`;

exports[`TextInput renders correctly without a label 1`] = `
.c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c0::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:hover:not(:focus) {
  border-color: #5A5F65;
}

.c0:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus {
  border-color: #0CD664;
  outline: none;
}

<input
  className="c0"
  placeholder="Enter code"
  type="text"
/>
`;
